PLAT-113765: Fix to set height of Scroller right in popupTabLayout when focusableScrollbar is "byEnter"
Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

--- a/Scroller/Scroller.module.less
+++ b/Scroller/Scroller.module.less
@@ -8,6 +8,9 @@
 	width: 100%;
 	height: 100%;
 	position: relative;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
 	padding: inherit;
 
 	&::before {
